--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>AluraPlus</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <sec
-    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Lingua por um preço único</h1>
-    <img src="img/Combo" alt="Combo é a união">
-    
+<section class="container principal">
+    <div>
+     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+     <img src="imagens/Combo.png" alt="O Combo+ é a junção do Alura+ e do Alura Línguas">
+     <a class="container__botao" href="https:www.alura.com.br/"> Assinar somente o Alura+</a>
+     <a class="container__botao botao__secundario" href="https://www.alura.com.br">Assinar somene o Alura+</a>
+     <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
+    </div>
+</section>
 </body>
 </html>
+    
